# tenet

./: .gitignore  launch.sh  module.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: docker-setup.sh
src/: __init__.py  circuit.py  gate.py  kernel.py  network.py  operator.py  ring.py  task.py  tree.py
tenet/: circuit.py  network.py  ring.py
test/: test_cnot.py  test_hadamard.py
