[tool.poetry]
name = "tenet"
version = "0.1.0"
description = ""
authors = ["Sergio Sánchez Ramírez <sergio.sanchez.ramirez@bsc.es>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
cirq = "^0.9.1"
pycompss = "^2.8"
networkx = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
